--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "jose": "^6.1.1",
     "lucide-react": "^0.553.0",
     "mongoose": "^8.19.3",
+    "motion": "^12.23.24",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.12"
