--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "motion": "^12.23.24",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
+    "openai": "^6.9.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-use-measure": "^2.1.7",
